@@ -1,4 +1,4 @@
-.TH NETMATE 1 "17 NOV 2013"
+.TH NETMATE 1 "13 OCT 2016"
 
 .SH "NAME"
 netmate \- displays network protocol headers in uniform RFC like format
@@ -31,6 +31,11 @@ For further information visit the netmate homepage at http://f00l.de/netmate/.
 
 .SH "HISTORY"
 .TP 5
+0.2.1 - 13.10.2016
+* removed separate ICMP data fields with one single field
+.br
+* updated code to match GTK 3.10 requirements
+.TP
 0.2.0 - 17.11.2013
 * added full support for neighbor discovery protocol (NDP)
 .br
@@ -74,7 +79,7 @@ For further information visit the netmate homepage at http://f00l.de/netmate/.
 * minor fixes
 
 .SH "COPYRIGHT"
-Copyright (c) 2013 Robert Krause
+Copyright (c) 2013-2016 Robert Krause
 
 Netmate is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or any later version.
 
