@@ -1,6 +1,6 @@
 /*******************************************************************************
  *
- * Copyright (c) 2013 Robert Krause (ruport@f00l.de)
+ * Copyright (c) 2013-2016 Robert Krause (ruport@f00l.de)
  *
  * This file is part of Netmate.
  *
