@@ -1,3 +1,8 @@
+2015-10-13 Robert Krause <Ruport@web.de>
+
+ * removed separate ICMP data fields with one single field
+ * updated code to match GTK 3.10 requirements
+
 2013-11-17 Robert Krause <Ruport@web.de>
 
  * added full support for neighbor discovery protocol (NDP)
